# mandelbrotsetc

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: main.cpp
